[package]
name = "bxssh"
version = "0.1.0"
edition = "2021"
authors = ["bashx-org"]
description = "A WebAssembly-compatible SSH client CLI"
license = "MIT OR Apache-2.0"

[dependencies]
# Error handling
anyhow = "1.0"
# Logging
log = "0.4"
# SSH Key generation and crypto (WASM-compatible)
ed25519-dalek = "2.0"
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
# Serialization for key storage
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Base64 encoding
base64 = "0.21"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# WebAssembly-specific dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "WebSocket", "MessageEvent", "ErrorEvent", "CloseEvent"] }
console_error_panic_hook = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native-only SSH implementation
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
# CLI and terminal
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.28"
rpassword = "7.0"
tokio = { version = "1.0", features = ["macros", "rt"] }
env_logger = "0.11"
dirs = "5.0"

[dev-dependencies]
# Testing framework
mockall = "0.12"
tempfile = "3.0"
serial_test = "3.0"
# For testing async code
tokio-test = "0.4"
# For testing CLI
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "bxssh"
path = "src/main.rs"
